--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
 		</style>
 	</head>
 	<body id="body" style="nowrap">
+		<script src="chs.js"></script>
+		<script src="core.js"></script>
 		<div id="htmlContent">
 			<!-- news ticker stuff -->
 			<div class="ticker-container">
@@ -405,5 +407,22 @@
 		<script src="main.js"></script>
 		<script src="Autosave.js"></script>
 		<script src="news.js"></script>
+<!--客服 开始-->
+<script src="//g8hh.github.io/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.github.io/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计-->
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?6581389daf4dd6fe7dbb4d20fdcb52a6";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+    </div>
 	</body>
 </html>
