--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Base incremental</title>
+		<meta charset="utf-8" />
 		<script src="baseClass.js"></script>
 		<style id="basicGameCSS">
 			@font-face { font-family: dmMono; src: url('DMMono-Medium.ttf'); } 
